--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>HEDGE</title>
+  <title>Domus Planner</title>
   <base href="/">
 </head>
 <body>
