--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,7 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
   body { font-family: 'Inter', sans-serif; }
 </style>
