--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,9 @@
   <meta http-equiv="Pragma" content="no-cache" />
   <meta http-equiv="Expires" content="0" />
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet" />
+  <!-- index.html -->
+<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cookieconsent@3/build/cookieconsent.min.css" />
+
   <meta name="viewport" content="width=device-width, initial-scale=1">
 <style>
   body { font-family: 'Inter', sans-serif; }
